--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -160,6 +160,7 @@ jobs:
               --tags=${{vars.TAGS}} \
               --image=${{steps.build.outputs.IMAGE_NAME}} \
               --boot-disk-size=${{vars.BOOT_SIZE}} \
+              --boot-disk-kms-key=${{vars.KMS_KEY}} \
               --network=projects/${{ secrets.PROJECT_ID }}/global/networks/${{vars.NETWORK_NAME }} \
               --subnet=projects/${{ secrets.PROJECT_ID }}/regions/${{vars.REGION}}/subnetworks/${{ vars.SUBNETWORK_NAME }} \
               --network-tier=${{vars.NETWORK_TIER}} \
@@ -184,6 +185,7 @@ jobs:
                   REGION: ${{vars.REGION}} 
 
     - name:  Starting a basic rolling update
+
       run: |
             INSTANCE_GROUP_NAME=${{vars.INSTANCE_GROUP_NAME}}
             INSTANCE_TEMPLATE="projects/${{ secrets.PROJECT_ID }}/regions/${{vars.REGION}}/instanceTemplates/new-webapp-instance-template"
